feat: complete crud ticket and banner
