# src/routes/api.ts
@@ -40,26 +40,26 @@ router.post(
   ],
   mediaController.single,
   /*
-    #swagger.tags = ['Media']
-    #swagger.security = [{
-      "bearerAuth": {}
-    }]
-    #swagger.requestBody = {
-      required: true
-      content: {
-        "multipart/form-data": {
-          schema: {
-            type: "object",
-            properties: {
-              file: {
-                type: "string",
-                format: "binary"
-              }
+  #swagger.tags = ['Media']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    content: {
+      "multipart/form-data": {
+        schema: {
+          type: "object",
+          properties: {
+            file: {
+              type: "string",
+              format: "binary"
             }
           }
         }
       }
     }
+  }
   */
 );
 
@@ -72,29 +72,29 @@ router.post(
   ],
   mediaController.multiple,
   /*
-    #swagger.tags = ['Media']
-    #swagger.security = [{
-      "bearerAuth": {}
-    }]
-    #swagger.requestBody = {
-      required: true
-      content: {
-        "multipart/form-data": {
-          schema: {
-            type: "object",
-            properties: {
-              files: {
-                type: "array",
-                items: {
-                  type: "string",
-                  format: "binary" 
-                }
+  #swagger.tags = ['Media']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    content: {
+      "multipart/form-data": {
+        schema: {
+          type: "object",
+          properties: {
+            files: {
+              type: "array",
+              items: {
+                type: "string",
+                format: "binary"
               }
             }
           }
         }
       }
     }
+  }
   */
 );
 
@@ -103,16 +103,16 @@ router.delete(
   [authMiddleware, aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])],
   mediaController.remove,
   /*
-    #swagger.tags = ['Media']
-    #swagger.security = [{
-      "bearerAuth": {}
-    }]
-    #swagger.requestBody = {
-      required: true
-      schema: {
-        $ref: "#/components/schemas/RemoveMediaRequest"
-      }
+  #swagger.tags = ['Media']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema: {
+      $ref: "#/components/schemas/RemoveMediaRequest"
     }
+  }
   */
 );
 
@@ -293,38 +293,128 @@ router.post(
   "/tickets",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.create,
+  /*
+    #swagger.tags = ['Tickets']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+    required: true,
+      schema: {
+        $ref: "#/components/schemas/CreateTicketRequest"
+      }
+    }
+  */
 );
-router.get("/tickets", ticketController.findAll);
-router.get("/tickets/:id", ticketController.findOne);
+router.get(
+  "/tickets",
+  ticketController.findAll,
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
+router.get(
+  "/tickets/:id",
+  ticketController.findOne,
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
 router.put(
   "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.update,
+  /*
+    #swagger.tags = ['Tickets']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+    required: true,
+      schema: {
+        $ref: "#/components/schemas/CreateTicketRequest"
+      }
+    }
+  */
 );
 router.delete(
   "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.remove,
+  /*
+    #swagger.tags = ['Tickets']
+     #swagger.security = [{
+      "bearerAuth": {}
+    }]
+  */
 );
-router.get("/tickets/:eventId/events", ticketController.findAllByEvent);
+router.get(
+  "/tickets/:eventId/events",
+  ticketController.findAllByEvent,
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
 
 // Banner
 router.post(
   "/banners",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.create,
+  /*
+    #swagger.tags = ['Banners']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+      required: true,
+      schema: {
+        $ref: "#/components/schemas/CreateBannerRequest"
+      }
+    }
+  */
 );
-router.get("/banners", bannerController.findAll);
-router.get("/banners/:id", bannerController.findOne);
+router.get(
+  "/banners",
+  bannerController.findAll,
+  /*
+  #swagger.tags = ['Banners']
+  */
+);
+router.get(
+  "/banners/:id",
+  bannerController.findOne,
+  /*
+  #swagger.tags = ['Banners']
+  */
+);
 router.put(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.update,
+  /*
+    #swagger.tags = ['Banners']
+    #swagger.security = [{
+      "bearerAuth": {}
+    }]
+    #swagger.requestBody = {
+    required: true,
+      schema: {
+        $ref: "#/components/schemas/CreateBannerRequest"
+      }
+    }
+  */
 );
 router.delete(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.remove,
+  /*
+    #swagger.tags = ['Banners']
+     #swagger.security = [{
+      "bearerAuth": {}
+    }]
+  */
 );
 
 export default router;
